# myblog

./: LICENSE  README.md  mdx-components.tsx  next.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/: global.css  layout.tsx  page.tsx
app/blog/: drafts.ts  page.tsx  utils.ts
app/blog/[slug]/: page.css  page.tsx
app/blog/posts/: binary-search.mdx  curry-howard-lean.mdx  load-address-prediction.mdx  static-typing.mdx  vega.mdx
app/components/: graph.tsx  iframe.tsx  interactive_line.tsx  lap-plot.tsx  mdx.tsx  nav.tsx  plot.css  plots.tsx
app/components/builtin/: mdx.tsx  nav.tsx  posts.tsx
app/components/client/: ThemeToggle.tsx  graph.tsx  graph_styles.css  lap-plot-client.tsx  vega.css  vega.tsx
app/rss/: route.ts
code/adding-numbers/: CMakeLists.txt  add_integers.asm  bench_add.cpp  results.csv  run.sh
code/binary-search/: .gitignore  CMakeLists.txt  README.md  build.sh  functions.cpp  functions.hpp  main.cpp  results.csv  run_experiments.sh
code/binary-search/results/amdzen2/: branches.csv  cycles.csv
code/binary-search/results/amdzen5/: bad_speculation.csv  branches.csv  cycles.csv  frontend_backend_bound.csv  frontend_backend_bound_level2.csv
code/binary-search/results/macbookpro/: results.csv
code/binary-search/results/raspi/: branches.csv  cycles.csv
code/binary-search/tests/: test_binary_search.cpp
code/load-address-prediction/: CMakeLists.txt  build.sh  experiments.cpp  plot_results.ipynb  results-amd.csv  results.csv  run.sh  setup.cpp  setup.h
code/spectre_v2/: spectre_v2_branch_poison.cpp
code/utils/: install-gbench.sh  install-gtest.sh
